content/browser/service_worker/embedded_worker_instance.h
@@ -51,6 +51,7 @@ class ServiceWorkerContextCore;
 class CONTENT_EXPORT EmbeddedWorkerInstance
     : NON_EXPORTED_BASE(public mojom::EmbeddedWorkerInstanceHost) {
  public:
+  class DevToolsProxy;
   typedef base::Callback<void(ServiceWorkerStatusCode)> StatusCallback;
 
   // This enum is used in UMA histograms. Append-only.
@@ -192,7 +193,6 @@ class CONTENT_EXPORT EmbeddedWorkerInstance
 
  private:
   typedef base::ObserverList<Listener> ListenerList;
-  class DevToolsProxy;
   class StartTask;
   class WorkerProcessHandle;
   friend class EmbeddedWorkerRegistry;
@@ -211,9 +211,10 @@ class CONTENT_EXPORT EmbeddedWorkerInstance
 
   // Called back from StartTask after the worker is registered to
   // WorkerDevToolsManager.
-  void OnRegisteredToDevToolsManager(bool is_new_process,
-                                     int worker_devtools_agent_route_id,
-                                     bool wait_for_debugger);
+  void OnRegisteredToDevToolsManager(
+      bool is_new_process,
+      std::unique_ptr<DevToolsProxy> devtools_proxy,
+      bool wait_for_debugger);
 
   // Sends StartWorker message via Mojo.
   ServiceWorkerStatusCode SendStartWorker(
